# lifetables

./: pyproject.toml
lifetables/: arriaga.py  helpers.py  life_table.py  populations.py
lifetables/data/: __init__.py  _nchs.py  nchs.py
lifetables/data/nchs/: life_tables.parquet
tests/: life_table.py
