[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lifetables"
version = "0.0.11"
authors = [
  { name="Alistair Pattison", email="alistairpattison@gmail.com" },
]
description = "Life tables in Python"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "joblib>=1.4.2",
    "lxml>=5.3.1",
    "pandas>=2.0.3",
    "polars>=1.8.2",
    "polars-utils",
    "rich>=13.9.4",
]

[project.urls]
Homepage = "https://github.com/alipatti/lifetables"

[dependency-groups]
dev = [
    "ipython>=8.12.3",
    "pytest>=8.3.5",
]

[tool.uv.sources]
polars-utils = { git = "https://github.com/alipatti/polars_utils" }

